--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     list-style: none;
+    font-family: 'Courier New', Courier, monospace;
   }
 
   .page-header a {
