--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,22 @@ body {
     padding: 0.5em;
     text-decoration: none;
   }
+
+  .items {
+    width: 80%;
+    margin: auto;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
+  }
+
+  .items img {
+    width: 100%;
+    height: auto;
+  }
+
+  .item {
+    background-color: wheat;
+  }
+
